hasqd/tests/coptest/usr/oleg/srv/agt/agt4.inp

set date "20110101"

r0 = recpwd _wrd 0 rdn pass
r1 = recpwd _wrd 1 rdn pass
expect 0 OK 100 tcp self { [ zero * _wrd ] r0 }
expect 0 OK 100 tcp self { [ zero * _wrd ] r1 }
expect 1 1 50 tcp self { [ last _wrd ] hash wrd [ rdn ] }
expect 0 OK 100 tcp self { [ last _wrd ] hash wrd [ rdn ] }

ag cf database "_wrd"
dirS = "agt4S"

ag fs mk dirS
ag dl self today dirS

list = "agt4_list.txt"
ag list dirS list [ self aaa:20 ]

#ag fs rm dirS
quit

